# QuizOwn

./: .gitignore  CMakeLists.txt  Dockerfile  QuizOwn.wxs  README.md  windows-toolchain.cmake
include/: logger.h  mainwindow.h  quizmanager.h  quizsection.h  sectiondialog.h
resources/styles/: main.qss
scripts/: build_installer.bat  convert_icon.sh
src/: logger.cpp  main.cpp  mainwindow.cpp  mainwindow.h  quizmanager.cpp  quizmanager.h  quizsection.cpp  sectiondialog.cpp
tests/: cpp_answers.txt  cpp_questions.txt  qt_answers.txt  qt_questions.txt
